# devkit

./: .codespellrc  .gitignore  .pre-commit-config.yaml  .versionrc.json  CHANGELOG.md  README.md  devkit.json
.github/workflows/: build-and-test.yaml  build-debian.yaml  build-debian.yml  build-rockylinux.yaml  build-rockylinux.yml  build.yaml  build.yml  docker_run_args_action.yaml  execute_subdirectories_action.yaml  get_architecture.yaml  json_docker_run_args.yaml  pre-commit.yaml  scorecard.yaml  scorecard.yml  stdin.yaml
devkit/: .bazelrc  bep  bootstrap  build  build-alpine  build-debian  build-rockylinux  check_checksums  clion_ide  commit-and-tag-version  coverage  dev  gcloud_setup  gemini  get-architecture  gh  gitlinks  gitlint  goland_ide  intellij_ide  jq  nvim  pre-commit  pycharm_ide  test  tool  vendor  vscode_ide  vscode_server
devkit/docker/: test_build.py
devkit/toolchains/: extensions.bzl  rules.bzl
docs/help/: bep.txt  bootstrap.txt  build.txt  check_checksums.txt  coverage.txt  dev.txt  get-architecture.txt  test.txt  vscode_ide.txt
docs/templates/: bep.md  bootstrap.md  build.md  check_checksums.md  coverage.md  dev.md  test.md  vscode_ide.md
images/: build-env-alpine.Dockerfile  build-env-debian.Dockerfile  build-env-rockylinux.Dockerfile  build-env.Dockerfile  clion-ide.Dockerfile  deps.json  dev-env.Dockerfile  gcloud-env.Dockerfile  goland-ide.Dockerfile  ide-env.Dockerfile  intellij-ide.Dockerfile  pycharm-ide.Dockerfile  tool-env.Dockerfile  vscode-ide.Dockerfile  vscode-server.Dockerfile
scripts/: bep.py  bootstrap.py  build_and_run  coverage_report.py  docker_run  docker_run.py  entrypoint_docker  find_project_root  find_project_root.py  gcloud_setup  lib_logging.sh  list_external_mounts.py  test_bep.py  test_bootstrap.py  test_docker_run.py  test_entrypoint  test_find_project_root.py  test_list_external_mounts.py
scripts/docker/: build.py  test_build.py
templates/cpp/: .bazelignore  .bazelrc  .gitignore  MODULE.bazel  MODULE.bazel.lock.llvm_bootstrapped.include  MODULE.bazel.lock.llvm_custom_sysroot.include  checksums.txt  devkit.json  google_internal
templates/cpp/ci/: test_entrypoint
(+21 files in other folders)
